--- a/history.txt
+++ b/history.txt
@@ -1,1 +1,15 @@
-cd echo echo echo pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd pwd echo echo repeat repeat echo repeat echo repeat echo repeat echo repeat hello repeat hello echo echo repeat repeat hello repeat hello echo echo repeat repeat echo repeat repeat echo repeat repeat echo repeat echo repeat echo repeat echo repeat repeat echo echo repeat echo echo repeat echo echo echo repeat echo echo echo echo echo repeat sleep sleep repeat sleep sleep cd cd cd cd cd 
+ls
+ls trial
+echo hello hello
+repeat 2 echo hello
+gedit &
+gedit 
+sleep 4
+history
+ls
+echo hi
+gedit &
+history
+echo hello
+echo hello
+exit
