--- a/history.txt
+++ b/history.txt
@@ -1,20 +1,20 @@
-cat < in.txt | wc -l > lines.txt
-pinfo
-repeat 2    echo hello
-repeat           2 ls
-pwd
-exit
-cat hell.c
-cat hell.c | wc
-cat hell.c | wc  |wc
-cat < in.txt | wc -l > lines.txt
-cat <x.txt | wc -l > lines.txt
-exit
-repeat 5 ls -al
-echo hello
-pwd
-sleep 4
-gedit &
-gedit
-vi &
-vi
+bg 2
+sleep 450 
+sleep 400 &
+fg 1
+sleep 450 &
+sig 1 19
+jobs
+bg 1
+jobs
+sleep 400 &
+sig 1 19
+jobs
+bg 1
+jobs
+sleep 450 &
+fg 1
+sleep 10 &
+fg 1
+sleep 500 &
+fg 1
